--- a/head.html
+++ b/head.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magni?</h1>
+    <h1>ectetur adipisicing elit. Aliquid, magni?</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quaerat officia dicta consequatur dolore, nemo
         tenetur sit id commodi dolores distinctio quas atque culpa porro totam quasi possimus, exercitationem maiores
         error minima, optio laudantium numquam magni mollitia! Cum, odit eum odio voluptas consequatur tempora
